# 100c

./: .clang-format  .gitignore  .goldbach3.c.swo  .inv_sqrt.s.swp  2dstrings_arrays  2dstrings_arrays.c  CMakeLists.txt  Makefile  README.md  a.out  argmax  argmax.c  argmax.h  arr_len  array_of_string_literals  array_of_string_literals.c  atoi  atoi.c  basic_calc.c  bigram  bigram.c  bigram2  binary_rep  binary_rep.c  bool.c  bpe.c  breaking_eulers_conjecture.c  cbp.c  cheat_pi100.c  clean.sh  clean_builds.sh  cmake.md  collatz  collatz.c  collatz_recursive.c  comb3  comb3.c  comma_operator  comma_operator.c  comments  (+128 more)
.github/workflows/: clang-format.yml
0DE5/: welcome  welcome.c
2048/: 2048.c  2048.cc  a.out  random.cc
advanced_c/: CMakeLists.txt  function_pointer_1  function_pointer_1.c  readme.md  variable_args.c  which_version.c
advanced_c/bit_feilds/: CMakeLists.txt  os_selecter.c
advanced_c/comma_operator/: CMakeLists.txt  comma_operator.c
advanced_c/function_pointer/: Makefile  bsort  bsort.c  function_pointer_1.c  kris.c  qsort  qsort.c
advanced_c/function_pointers/: CMakeLists.txt  bsort.c  predicate.c  qsort.c
advanced_c/loonng_number/: loonng.c
advanced_c/loonngg_number/: CMakeLists.txt
advanced_c/luts/: CMakeLists.txt  enum.c
arch/: area.c  area.i
atoi/: main.c
basics/: a.out  arr_len.c  array_of_string_literals.c  bool.c  cast.c  fcube_root.c  for_loop  for_loop.c  guess_the_number.c  int_float_same_same.c  macro.c  ms_rand.c  pid.c  print_arr.c  rainbow.c  random.c  size_int.c  size_t.c  sizeof.c  sort_char.c  sort_ints.c  sort_ints.h  sqrt.c  ternary.c  test.c  time.c
basics/foo_bar/: .Makefile.swp  .gitignore  Makefile  bar  bar.c  foo  foo.h  readme.md
basics/goto/: Makefile  simple_goto.c  simple_goto.s
basics/pointers/: Makefile  basic  basic.c  doubler.c
basics/strings/: char_arr.c  count_words  count_words.c  diamond.c  haiku.txt  line_by_line  line_by_line.c  strchr.c  strcmp.c
basics/structs/: great_point.c
basics/xor_encryption/: encrypt.c  encrypt.py
bigram-model/: .bigram.c.swp  CMakeLists.txt  Makefile  a  a.out  b  bigram  bigram.c  bigram.py  cmake.md  comp_bigram.sh  dict.c  dict.h  fruits.txt  itos.h  line_count.c  line_count.h  mockup.c  plot_N.c  plot_N.h  print_arr.c  print_arr.h  print_bigrams.c  print_float_arr.c  prob_dist.c  prob_dist.h  prob_dist.py  random.c  random.h  sample.c  sample.h  stoi.c  sum_arr.c  sum_arr.h  t  t.c  test_2d_print.c  test_dict.c  test_itos.c
bigram-model/app/: bigram.c
bigram-model/include/bigram-model/: dict.h  itos.h  plot_N.h  print_arr.h  random.h  sample.h  sum_arr.h
bigram-model/src/: dict.c  line_count.c  plot_N.c  prob_dist.c  sample.c  stoi.c
bigram-model/tests/: test_itos.c
bigram_model/: CMakeLists.txt  cmake.md
bigram_model/app/: bigram.c
bigram_model/src/: dict.c  itos.c  plot_N.c  prob_dist.c  sample.c  stoi.c  sum_arr.c
bigram_model/tests/: test_itos.c
c++/namespaces/: lib.cc
class/: bank.cc  bank_acc.cc  cat.cc
class/poker/: .cat.cc.swp  deck.cc
curses/: cont_inp.c  cursor_pos.c  readme.md  snake_head.c  snake_head.cc
data_structures/: notes.md
data_structures/course_notes/: CS261.html  CS261Description.html  CS261Homework.html  CS261Slides.html  index.html
data_structures/dynamic_array/: cmakelists.txt  demo_set_interface.c  dynamic_array.c  dynamic_array.h  main.c  operations.md  readme.md  set_interface.c  set_interface.h
data_structures/hash_table/: CMakeLists.txt  fnv.c  fnv.h  main.c  test_fnv.c
file_io/: a.out  fread.c  lexicographic_sort.c  quote.txt  sorted.txt  sorted_quote.txt  uniq_chars.c  unique_chars_freq  unsorted.txt
file_io/basic/: quote.txt  uniq_chars_freq.c  write-bin.c
foo_bar/: bar.c  foo
fork/: child.c  pathtracing_syscall.c
goto/: a.out  simple_goto.c
hackers_delight/: a.out  binary_rep.c  for_loop.c
hash-table/: readme.md
hash_table/: readme.md
img-vis/: Makefile  main  main.c
img_vis/: CMakeLists.txt  gif.c  main  main.c  run.sh  test_sdl
math/: CMakeLists.txt  a.out  cheat_pi100.c  collatz.c  collatz_recursive.c  goldbach.c  inv_sqrt.c  lu.py  lu_decomposition.c  lu_verify.py  newtons_method.c  pi.c  primes.c  primes.h
ml/: CMakeLists.txt  cross_entropy.c  dot_prod.c  mat_vec_mul.c  rms_norm.c  sample.c  softmax.c
networking/: .basic_stock_api.c.swp  basic_stock_api.c  socket.c
pointers/: basic  doubler  vrindavansanap.txt
poker/: deck.cc
quiz/: CMakeLists.txt  Makefile  a.out  cJSON.c  cJSON.h  dataset_info.txt  quiz  quiz.c  single_correct.py
quiz/cJSON/: a.out  books.json  cJSON.c  cJSON.h  read.c  write.c
quiz/js/: index.js  package-lock.json  package.json
resources/: cmake.md
sandbox/: a.out  strchr.c
stl/: basic_set.cc
stopwatch/: CMakeLists.txt  main.c  prime_time.c  sec_read.c
strings/: a.out  count_words.c  diamond  diamond.c  gpt_test  gpt_test.c  strcmp.c  string_halfs_alike.c
structs/: struct.c
time_counter/: CMakeLists.txt  main.c
timmer/: CMakeLists.txt  main.c
utils/: CMakeLists.txt
visualise-mnist-in-c/: .gitignore  a.out  download_and_unzip_mnist.sh  main  main.c  playloop.c  readme.md  smol_main.c
xor_encryption/: a.out  encrypt.c  encrypt.py  test.c  test2.c
(+52 files in other folders)
